# AdePT

base/inc/CopCore/include/CopCore/: Ranluxpp.h
examples/: CMakeLists.txt
examples/Example13/: electrons.cu  example13.cuh  gammas.cu
examples/Example14/: electrons.cuh  gammas.cuh
examples/Example16/: electrons.cu  example16.cuh  gammas.cu
examples/Example17/: electrons.cuh  gammas.cuh
examples/Example18/: electrons.cu  example18.cuh  gammas.cu
examples/Example19/: CMakeLists.txt  README.md  electrons.cu  example.cuh  gammas.cu  llama.hpp  main.cu
examples/TestEm3/: TestEm3.cuh  electrons.cu  gammas.cu
examples/TestEm3DoubleBuffer/: TestEm3.cuh  electrons.cu  gammas.cu
examples/TestEm3DoubleBuffer_llama/: CMakeLists.txt  TestEm3.cu  TestEm3.cuh  electrons.cu  gammas.cu  llama.hpp
examples/TestEm3_llama/: CMakeLists.txt  TestEm3.cu  TestEm3.cuh  electrons.cu  gammas.cu  llama.hpp
